force-app/main/default/objects/Human_Animal_Interaction__c/Human_Animal_Interaction__c.object-meta.xml
<CustomObject>
    <description
  >Historical human-animal interaction record linked to an animal and episode.</description>
    <label>Human Animal Interaction</label>
    <nameField>
        <label>Human Animal Interaction Number</label>
        <displayFormat>HAI-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Human Animal Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>