force-app/main/default/objects/Human_Animal_Interaction__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <description>Animal linked redundantly for direct reporting.</description>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Human Animal Interactions</relationshipLabel>
    <relationshipName>Human_Animal_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>