force-app/main/default/objects/Human_Animal_Interaction__c/fields/Animal_Episode__c.field-meta.xml
<CustomField>
    <fullName>Animal_Episode__c</fullName>
    <description>Episode linked to the interaction.</description>
    <label>Animal Episode</label>
    <referenceTo>Animal_Episode__c</referenceTo>
    <relationshipLabel>Human Animal Interactions</relationshipLabel>
    <relationshipName>Human_Animal_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>