force-app/main/default/objects/Human_Animal_Interaction__c/fields/Animal_Response__c.field-meta.xml
<CustomField>
    <fullName>Animal_Response__c</fullName>
    <description>Observed animal response during the interaction.</description>
    <label>Animal Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>A360_Animal_Response</valueSetName>
    </valueSet>
</CustomField>