force-app/main/default/objects/Human_Animal_Interaction__c/fields/Aversive_Stimulus_Observed__c.field-meta.xml
<CustomField>
    <fullName>Aversive_Stimulus_Observed__c</fullName>
    <description
  >Indicates whether an aversive stimulus was observed during the interaction.</description>
    <label>Aversive Stimulus Observed</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>