force-app/main/default/objects/Human_Animal_Interaction__c/fields/Follow_Up_Required__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Required__c</fullName>
    <description>Flags whether the interaction requires follow-up.</description>
    <label>Follow Up Required</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>