force-app/main/default/objects/Human_Animal_Interaction__c/fields/Human_Role__c.field-meta.xml
<CustomField>
    <fullName>Human_Role__c</fullName>
    <description>Role of the human participant.</description>
    <label>Human Role</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Assessor</fullName>
            </value>
            <value>
                <fullName>Care Staff</fullName>
            </value>
            <value>
                <fullName>Veterinarian</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Foster Carer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>