force-app/main/default/objects/Human_Animal_Interaction__c/fields/Interaction_Contact__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Contact__c</fullName>
    <description
  >Optional external or internal contact who participated in the interaction.</description>
    <label>Interaction Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Human Animal Interactions</relationshipLabel>
    <relationshipName>Human_Animal_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>