force-app/main/default/objects/Human_Animal_Interaction__c/fields/Interaction_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Interaction_DateTime__c</fullName>
    <description>Date and time of the interaction.</description>
    <label>Interaction Date Time</label>
    <type>DateTime</type>
</CustomField>