force-app/main/default/objects/Human_Animal_Interaction__c/fields/Interaction_Quality__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Quality__c</fullName>
    <description
  >Quality of the interaction from the handler perspective.</description>
    <label>Interaction Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>A360_Interaction_Quality</valueSetName>
    </valueSet>
</CustomField>