force-app/main/default/objects/Human_Animal_Interaction__c/fields/Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Type__c</fullName>
    <description>Type of interaction recorded.</description>
    <label>Interaction Type</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Handling</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Feeding</fullName>
            </value>
            <value>
                <fullName>Enrichment</fullName>
            </value>
            <value>
                <fullName>Clinical Handling</fullName>
            </value>
            <value>
                <fullName>Visitor Interaction</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>