force-app/main/default/objects/Human_Animal_Interaction__c/fields/Recorded_By__c.field-meta.xml
<CustomField>
    <fullName>Recorded_By__c</fullName>
    <description>User who recorded the interaction.</description>
    <label>Recorded By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Human Animal Interactions</relationshipLabel>
    <relationshipName>Human_Animal_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>