force-app/main/default/objects/Human_Animal_Interaction__c/fields/Restraint_Used__c.field-meta.xml
<CustomField>
    <fullName>Restraint_Used__c</fullName>
    <description
  >Indicates whether restraint was used in the interaction.</description>
    <label>Restraint Used</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>