force-app/main/default/objects/Human_Animal_Interaction__c/fields/Reward_Used__c.field-meta.xml
<CustomField>
    <fullName>Reward_Used__c</fullName>
    <description
  >Indicates whether a reward was used in the interaction.</description>
    <label>Reward Used</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>